fix(hotfix/fix-body): fix overscroll behavior on mobile

--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ html{
     height: 100%;
     width: 100%;
     overflow: hidden;
+    overscroll-behavior: none
 }
 
 body {
@@ -18,6 +19,7 @@ body {
     height: 100%;
     width: 100%;
     overflow: auto;
+    overscroll-behavior: none
 }
 
 #header {
